# avshw1

./: CMakeLists.txt  main.cpp  Отчет_с_характеристиками.txt
Movies/Files with cpp/: cartoon.cpp  container.cpp  documentary.cpp  fiction.cpp  movie.cpp  randomGenerator.cpp
Movies/Files with h/: cartoon.h  constants.h  container.h  documentary.h  fiction.h  movie.h  randomGenerator.h
Tests/: test.txt
