cmake_minimum_required(VERSION 3.20)
project(AVSHomework1)

set(CMAKE_CXX_STANDARD 14)

add_executable(AVSHomework1 main.cpp "Movies/Files with cpp/fiction.cpp" "Movies/Files with h/fiction.h" "Movies/Files with cpp/cartoon.cpp" "Movies/Files with h/cartoon.h" "Movies/Files with cpp/documentary.cpp" "Movies/Files with h/documentary.h" "Movies/Files with cpp/movie.cpp" "Movies/Files with h/movie.h" "Movies/Files with cpp/container.cpp" "Movies/Files with h/container.h" "Movies/Files with cpp/randomGenerator.cpp" "Movies/Files with h/randomGenerator.h" "Movies/Files with h/constants.h")
